@@ -8,8 +8,9 @@
    <groupId>com</groupId>
    <artifactId>marketsim</artifactId>
    <version>1.0-SNAPSHOT</version>
-   
-   <properties>
+
+
+    <properties>
       <maven.compiler.source>11</maven.compiler.source>
       <maven.compiler.target>11</maven.compiler.target>
    </properties>
@@ -35,6 +36,13 @@
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>
+      <!-- add API dependencies here later -->
+       <dependency>
+           <groupId>org.junit.jupiter</groupId>
+           <artifactId>junit-jupiter</artifactId>
+           <version>5.13.4</version>
+           <scope>test</scope>
+       </dependency>
    </dependencies>
 
    <build>
@@ -48,6 +56,20 @@
           <mainClass>com.Main</mainClass>
         </configuration>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>24</source>
+                <target>24</target>
+                <compilerArgs>--enable-preview</compilerArgs>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 
@@ -56,8 +78,8 @@
     <profile>
       <id>etldemo</id>
       <build>
-          <plugins>
-              <plugin>
+        <plugins>
+          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>3.1.0</version>
